--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
 
   "rules" : {
     "import/prefer-default-export": "off",
-
+    "no-control-regex": 0,
     "prettier/prettier": [
       "warn",
       {
