--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
     "import/prefer-default-export": "off",
     "no-control-regex": 0,
     "no-new": 0,
-    "import/no-cycle": 0,
+    // "import/no-cycle": 0,
     "prettier/prettier": [
       "warn",
       {
