--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint ./src"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-airbnb-typescript-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
-    "prettier": "^2.3.1",
+    "prettier": "2.3.1",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.3",
@@ -28,7 +30,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0"
   }
 }
