refactor: rename files in one way && and refactor code according to DRY principle

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack",
-    "dev": "webpack serve --env develop",
+    "start": "webpack serve --env develop",
     "lint": "eslint ./src"
   },
   "devDependencies": {
