--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-redux": "^7.1.16",
     "@typescript-eslint/parser": "^4.27.0",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
